Dev log out routes
